--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -65,7 +65,7 @@ jobs:
         echo $PACKAGE > package.json
         echo "global.applicationPath = __dirname" > main.js
         echo "require('@userdashboard/storage-redis/test-helper.js')" >> main.js
-    - name: Test as only storage for Dashboard and modules
+    - name: Generate tests.txt
       run: |
         ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
         TESTS=`cat tests.txt`
@@ -77,51 +77,6 @@ jobs:
         NODE_ENV: testing
         STORAGE: "@userdashboard/storage-redis"
         REDIS_URL: redis://localhost:6379
-        NODE_OPTIONS: --preserve-symlinks
-    - name: Test as Dashboard storage with module on other type
-      run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
-        TESTS=`cat tests.txt`
-        if [[ "$TESTS" == *" 1)"* ]]; then
-          exit 1
-        fi
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: redis://localhost:6379
-        ORGANIZATIONS_STORAGE: "@userdashboard/storage-mongodb"
-        ORGANIZATIONS_MONGODB_URL: mongodb://localhost:27017
-        NODE_OPTIONS: --preserve-symlinks
-    - name: Test as module storage with Dashboard on other type
-      run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
-        TESTS=`cat tests.txt`
-        if [[ "$TESTS" == *" 1)"* ]]; then
-          exit 1
-        fi
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-mongodb"
-        MONGODB_URL: mongodb://localhost:27017
-        ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: redis://localhost:6379
-        NODE_OPTIONS: --preserve-symlinks
-    - name: Test as Dashboard and module storage using separate servers
-      run: |
-        ./node_modules/.bin/mocha --file main.js --bail --exit --recursive --timeout 90000000 $(find ./node_modules/@userdashboard/*/ -name "*.test.js" | grep -i -v [a-z0-9]/node_modules | sort -k5.1,8.1 -t /) | tee tests.txt
-        TESTS=`cat tests.txt`
-        if [[ "$TESTS" == *" 1)"* ]]; then
-          exit 1
-        fi
-      working-directory: /tmp/project
-      env:
-        NODE_ENV: testing
-        STORAGE: "@userdashboard/storage-redis"
-        REDIS_URL: "redis://localhost:6379/0"
-        ORGANIZATIONS_STORAGE: "@userdashboard/storage-redis"
-        ORGANIZATIONS_REDIS_URL: "redis://localhost:6379/1"
         NODE_OPTIONS: --preserve-symlinks
     - name: Publish to Github
       uses: stefanzweifel/git-auto-commit-action@v4.1.6
